PyMaker/datas/object2/RawHTML/i1201/Python_DOC_referPages.renpy-will-not-install-python-module-turtle.txt
<div class="post-text" itemprop="text">
<p>I am trying to install python module turtle to my Ren'Py game. However, it will not install even if I clean the cache and download a fresh version of turtle:</p>
<pre><code>pip install --target game/python-packages turtle

Collecting turtle
  Downloading https://files.pythonhosted.org/packages/ff/f0/21a42e9e424d24bdd0e509d5ed3c7dfb8f47d962d9c044dba903b0b4a26f/turtle-0.0.2.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "&lt;string&gt;", line 1, in &lt;module&gt;
      File "/private/var/folders/np/9134zq452dj8pt6435_dqb6h0000gn/T/pip-install-lzh_pa9s/turtle/setup.py", line 40
        except ValueError, ve:
                         ^
   SyntaxError: invalid syntax

    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /private/var/folders/np/9134zq452dj8pt6435_dqb6h0000gn/T/pip-install-lzh_pa9s/turtle/
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The syntax <code>except ValueError, ve:</code> is Python2-syntax and you're installing the module with Python3. The module was not updated since 2009, it's certainly Python2-only.</p>
<p>The actual module <code>turtle</code> is a part of the standard library, you don't need to install it, it must always be available.</p>
</div>
<span class="comment-copy">The <a href="https://docs.python.org/3/library/turtle.html" rel="nofollow noreferrer"><code>turtle</code></a> module has been part of the Python standard library for <i>many</i> years. Are you sure you need to install anything at all?</span>
<span class="comment-copy">Well, I think Ren'Py uses a special version of python. It returns <a href="http://h2database.com/p.html#574be833a2f9130827046e567cea8ff3" rel="nofollow noreferrer">this error</a>when I try to import it like this:                                                                                          <code>label start:     init python:         import turtle</code></span>
